<resources>
    <string name="app_name">MyFirstMarcos</string>
    <string name="lista_vacia">Lista vazia</string>
    <string name="label_nome_hipoteca">Nome hipoteca</string>
    <string name="label_condicoes">Condições</string>
    <string name="label_contato">Contato</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_observacoes">Observações</string>
    <string name="label_contrato">Contato</string>
    <string name="menu_crear">Criar</string>
    <string name="button_salvar">Salvaar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="hipoteca_crear_titulo">Nova Hipoteca</string>
    <string name="hipoteca_criar_confirmacao">Hipoteca Criada</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_guardar">Salvar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="hipoteca_eliminar_titulo">Eliminar hipoteca</string>
    <string name="hipoteca_eliminar_mensagem">Deseja mesmo eliminar?</string>
    <string name="hipoteca_eliminar_confirmacao">Hipoteca eliminada!</string>
    <string name="hipoteca_editar_titulo">Editar hipoteca</string>
    <string name="hipoteca_editar_confirmacao">Hipoteca modificada!</string>
    <string name="menu_editar">Editar</string>

</resources>
